--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cosla/sensemaking-web-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Provides interactive visualizations and report from sensemaking-tools output. Fork of Jigsaw's sensemaking-tools web-ui (https://github.com/Jigsaw-Code/sensemaking-tools).",
   "homepage": "https://github.com/CoslaDigital/sensemaking-tools#readme",
   "scripts": {
@@ -63,7 +63,9 @@
     "@angular/ssr": "18.2.13",
     "@conversationai/sensemaker-visualizations": "^1.0.46",
     "@sinclair/typebox": "^0.34.27",
+    "esbuild": "^0.23.0",
     "express": "^4.18.2",
+    "jsdom": "^26.1.0",
     "ngx-markdown": "^18.0.0",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
@@ -80,7 +82,6 @@
     "@types/papaparse": "^5.3.14",
     "concurrently": "^9.0.1",
     "jasmine-core": "~5.1.0",
-    "jsdom": "^26.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
