--- a/web-ui/tsconfig.app.json
+++ b/web-ui/tsconfig.app.json
@@ -14,6 +14,11 @@
     "server.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ]
 }
