--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -66,6 +66,7 @@
     "@sinclair/typebox": "^0.34.27",
     "esbuild": "^0.25.0",
     "express": "^4.18.2",
+    "jsdom": "^26.1.0",
     "ngx-markdown": "^19.1.1",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
